# MIMO_IOS

./: .gitattributes  .gitignore  NDIView.swift  README.md  pubspec.yaml  push_fix.bat  trigger_build.bat
.github/workflows/: main.yml  sunlight_build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/antigravity/ndi_player_app/: MainActivity.kt  NDIManager.kt  NdiCameraPreview.kt  NdiCameraPreviewFactory.kt  NdiView.kt  NdiViewFactory.kt
ios/: Podfile  configure_xcode.rb
ios/NDISDK/lib/: split_ndi.ps1
ios/Runner/: AppDelegate.swift  CrashLogger.swift  GoogleService-Info.plist  Info.plist  NDI-Bridging-Header.h  NDIManager.swift  NDIView.swift  NdiCameraPreview.swift  Runner-Bridging-Header.h
lib/: firebase_options.dart  login_screen.dart  main.dart  midas_m32.dart  sunlight_controller.dart  vmix_controller.dart
